--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "bcryptjs": "^2.3.0",
     "body-parser": "~1.13.2",
     "cookie-parser": "~1.3.5",
-    "express": "~4.13.1"
+    "express": "~4.13.1",
+    "express-mung": "^0.4.2",
+    "lodash": "^4.14.0"
   },
   "devDependencies": {
     "debug": "^2.2.0",
