--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "cookie-parser": "~1.3.5",
     "express": "~4.13.1",
     "express-mung": "^0.4.2",
-    "lodash": "^4.14.0"
+    "lodash": "^4.14.0",
+    "mongoose-auto-increment": "^5.0.1"
   },
   "devDependencies": {
     "debug": "^2.2.0",
