--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "express": "~4.13.1",
     "express-mung": "^0.4.2",
     "lodash": "^4.14.0",
+    "mongoose": "^4.5.8",
     "mongoose-auto-increment": "^5.0.1"
   },
   "devDependencies": {
